--- a/AgentsWeb/WebContent/index.html
+++ b/AgentsWeb/WebContent/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.js"></script>
 <script src="controller.js"></script>
 <title>Agents</title>
 </head>
@@ -161,12 +162,12 @@
 			    </uib-accordion-group>
 			</uib-accordion>
 			<uib-accordion>
-			    <uib-accordion-group is-open="cc.accordion.agents">
+			    <uib-accordion-group is-open="true">
 			        <uib-accordion-heading>
 			            <div class="hover">Running server-side agents</div>
 			        </uib-accordion-heading>
 			        <div class="console-box" scroll-glue>
-				        <div ng-repeat="agent in cc.agents.array track by $index">
+				        <div ng-repeat="agent in runningAgents track by $index">
 				            <small>{{agent}}</small>
 			            </div>
 			        </div>
