Running agents update

--- a/AgentsWeb/WebContent/index.html
+++ b/AgentsWeb/WebContent/index.html
@@ -168,7 +168,7 @@
 			        </uib-accordion-heading>
 			        <div class="console-box" scroll-glue>
 				        <div ng-repeat="agent in runningAgents track by $index">
-				            <small>{{agent}}</small>
+				            <small>{{agent.id}}</small>
 			            </div>
 			        </div>
 			    </uib-accordion-group>
