--- a/AgentsWeb/WebContent/index.html
+++ b/AgentsWeb/WebContent/index.html
@@ -5,176 +5,13 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-resource.js"></script>
+<script src="router.js"></script>
 <script src="controller.js"></script>
 <title>Agents</title>
 </head>
 <body ng-app="agents">
-	<br>
-	<br>
-	<br>
-	<div ng-controller = "AgentsController">
-		<!-- Agents -->
-		<div class = "col-md-4">
-			<table class=" table-hover table-condensed table-bordered table-hover table-striped row-clickable">
-				<tr>
-					<th>Available agents</th>
-				</tr>
-				<tr class="hover" ng-repeat="agent in agentTypes" ng-click="addAgent(agent)">
-					<td>{{agent.name}}</td>
-				</tr>
-			</table>
-		</div>
-		
-		<!-- Message form -->
-		<div class="col-md-4">
-			<table class="table">
-				<tr>
-					<form>
-		                <div class="form-group">
-		                    <label for="performative" class="control-label">
-		                        Performative:
-		                    </label>
-		                    <div class="input-wrap">
-		                        <select id="performative" ng-options="performative for performative in performatives" ng-model="selectedPerformative" class="form-control">
-		                            <option value="">---</option>
-		                        </select>
-		                    </div>
-		                </div>
-		                <div class="form-group">
-		                    <label for="sender" class="control-label">
-		                        Sender:
-		                    </label>
-		                    <div class="input-wrap">
-		                        <select id="sender" ng-options="agent.id.name for agent in runningAgents track by agent.id.name" ng-model="selectedSender" class="form-control">
-		                            <option value="">---</option>
-		                        </select>
-		                    </div>
-		                </div>
-		                <div class="form-group">
-		                    <label for="receiver" class="control-label">
-		                        Receiver:
-		                    </label>
-		                    <div class="input-wrap">
-		                        <select id="receiver" ng-options="agent.id.name for agent in runningAgents track by agent.id.name" ng-model="selectedReciever" class="form-control">
-		                            <option value="">---</option>
-		                        </select>
-		                    </div>
-		                </div>
-		                <div class="form-group">
-		                    <label for="replyTo" class="control-label">
-		                        Reply to:
-		                    </label>
-		                    <div class="input-wrap">
-		                        <select id="replyTo" ng-options="agent.id.name for agent in runningAgents track by agent.id.name" ng-model="selectedReplyTo" class="form-control">
-		                            <option value="">---</option>
-		                        </select>
-		                    </div>
-		                </div>
-		                <div class="form-group">
-		                    <label class="control-label">
-		                        Content:
-		                    </label>
-		                    <div class="input-wrap">
-		                        <input type="text" ng-model="content" class="form-control">
-		                    </div>
-		                </div>
-		                <div class="form-group">
-		                    <label class="control-label">
-		                        Language:
-		                    </label>
-		                    <div class="input-wrap">
-		                        <input type="text" ng-model="language" class="form-control">
-		                    </div>
-		                </div>
-		                <div class="form-group">
-		                    <label class="control-label">
-		                        Encoding:
-		                    </label>
-		                    <div class="input-wrap">
-		                        <input type="text" ng-model="encoding" class="form-control">
-		                    </div>
-		                </div>
-		                <div class="form-group">
-		                    <label class="control-label">
-		                        Ontology:
-		                    </label>
-		                    <div class="input-wrap">
-		                        <input type="text" ng-model="ontology" class="form-control">
-		                    </div>
-		                </div>
-		                <div class="form-group">
-		                    <label class="control-label">
-		                        Protocol:
-		                    </label>
-		                    <div class="input-wrap">
-		                        <input type="text" ng-model="protocol" class="form-control">
-		                    </div>
-		                </div>
-		                <div class="form-group">
-		                    <label class="control-label">
-		                        Conversation ID:
-		                    </label>
-		                    <div class="input-wrap">
-		                        <input type="text" ng-model="conversationId" class="form-control">
-		                    </div>
-		                </div>
-		                <div class="form-group">
-		                    <label class="control-label">
-		                        Reply with:
-		                    </label>
-		                    <div class="input-wrap">
-		                        <input type="text" ng-model="replyWith" class="form-control">
-		                    </div>
-		                </div>
-		                <div class="form-group">
-		                    <label class="control-label">
-		                        Reply by:
-		                    </label>
-		                    <div class="input-wrap">
-		                        <input type="number" ng-model="replyBy" class="form-control">
-		                    </div>
-		                </div>
-		                <div class="form-group">
-		                    <button type="button" class="btn btn-primary save" ng-click="sendMessage()">Send ACL message</button>
-		                </div>
-		            </form>
-				</tr>
-				<tr>
-					<th>Messages</th>
-				</tr>
-			</table>
-		</div>
-		
-		
-		<!-- Console and running agents -->
-		<div class="col-md-4">
-			<button class="btn btn-primary" ng-click="clearConsole()">Clear console messages</button><br><br>
-			<uib-accordion>
-			    <uib-accordion-group is-open="cc.accordion.messages">
-			        <uib-accordion-heading>
-			            <div class="hover">Console messages</div>
-			        </uib-accordion-heading>
-			        <div class="console-box" scroll-glue>
-				        <div ng-repeat="message in cc.messages track by $index">
-				            <small>{{message}}</small>
-			            </div>
-			        </div>
-			    </uib-accordion-group>
-			</uib-accordion>
-			<uib-accordion>
-			    <uib-accordion-group is-open="true">
-			        <uib-accordion-heading>
-			            <div class="hover">Running server-side agents</div>
-			        </uib-accordion-heading>
-			        <div class="console-box" scroll-glue>
-				        <div ng-repeat="agent in runningAgents track by $index">
-				            <small>{{agent.id.name}}${{agent.id.host.address}}${{agent.id.type.module}}</small>
-			            </div>
-			        </div>
-			    </uib-accordion-group>
-			</uib-accordion>
-		</div>
-	</div>
-	
+	<div ng-view></div>
 </body>
 </html>
